--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <body>
 
-<img src="https://s7d9.scene7.com/is/image/TrueReligion/m2fe08zy9m_boqd_frt1?$dfs_large$" border="0" usemap="#map">
+<img src="model.png" border="0" usemap="#map">
 
 <map name="map">
-    <area href="https://capgemini05-alliance-prtnr-eu09-dw.demandware.net/s/TrueReligion/slim-mens-jean/M2FE08ZY9M.html?color=BOQD" target="_blank" shape="rect" coords="0, 280, 375, 0">
-    <area href="https://capgemini05-alliance-prtnr-eu09-dw.demandware.net/s/TrueReligion/hex-v1-high-top-leather-sneaker/TRSHOE001.html?color=1001" target="_blank" shape="rect" coords="0, 565, 375, 280">
+    <area href="https://capgemini05-alliance-prtnr-eu09-dw.demandware.net/s/TrueReligion/slim-mens-jean/M2FE08ZY9M.html?color=BOQD" target="_blank" shape="rect" coords="0, 150, 375, 0">
+    <area href="https://capgemini05-alliance-prtnr-eu09-dw.demandware.net/s/TrueReligion/hex-v1-high-top-leather-sneaker/TRSHOE001.html?color=1001" target="_blank" shape="rect" coords="0, 151, 375, 320">
+    <area href="https://capgemini05-alliance-prtnr-eu09-dw.demandware.net/s/TrueReligion/slim-mens-jean/M2FE08ZY9M.html?color=BOQD" target="_blank" shape="rect" coords="0, 565, 375, 321">
 </map>
 </body>
 </html>
