--- a/home.html
+++ b/home.html
@@ -1,12 +1,12 @@
 <html>
 <body>
-
-<img src="model.png" border="0" usemap="#map">
-
+<div align="center">
+<img src="model.jpg" style="width:1260px;" border="0" usemap="#map">
 <map name="map">
-    <area href="https://capgemini05-alliance-prtnr-eu09-dw.demandware.net/s/TrueReligion/slim-mens-jean/M2FE08ZY9M.html?color=BOQD" target="_blank" shape="rect" coords="0, 150, 375, 0">
-    <area href="https://capgemini05-alliance-prtnr-eu09-dw.demandware.net/s/TrueReligion/hex-v1-high-top-leather-sneaker/TRSHOE001.html?color=1001" target="_blank" shape="rect" coords="0, 151, 375, 320">
-    <area href="https://capgemini05-alliance-prtnr-eu09-dw.demandware.net/s/TrueReligion/slim-mens-jean/M2FE08ZY9M.html?color=BOQD" target="_blank" shape="rect" coords="0, 565, 375, 321">
+<area href="https://www.amazon.in/dp/B077MX2XPD/ref=sspa_dk_detail_3?psc=1&pd_rd_i=B077MX2XPD&pf_rd_m=A1VBAL9TL5WCBF&pf_rd_p=5851cbbe-e524-4100-8b12-96516f61ddea&pd_rd_wg=mBO2H&pf_rd_r=V0W3HT3XAE74VFPGMJ1R&pf_rd_s=desktop-dp-sims&pf_rd_t=40701&pd_rd_w=ue9hi&pf_rd_i=desktop-dp-sims&pd_rd_r=e14a5886-f2d2-11e8-adfa-61e1978dceb9" target="_blank" shape="rect" coords="0, 765, 340, 0">
+<area href="https://www.amazon.in/MP-ENTERPRIESES-71x30-inch-50x30-inch-29x30-inch/dp/B079JQHF9Q/ref=lp_5689463031_1_3?s=kitchen&ie=UTF8&qid=1543385446&sr=1-3" target="_blank" shape="rect" coords="360, 765, 860, 0">
+<area href="https://www.amazon.in/HELICON-Strong-Stainless-reading-working/dp/B071WC7HXZ/ref=sr_1_6?s=kitchen&ie=UTF8&qid=1543384981&sr=1-6&keywords=steel+lamps" target="_blank" shape="rect" coords="880, 765, 1260, 0">
 </map>
+</div>
 </body>
 </html>
