--- a/home.html
+++ b/home.html
@@ -1,5 +1,12 @@
 <html>
 <body>
+<style>
+area:active, area:focus {
+  outline: 0;
+  border: none;
+  -moz-outline-style: none;
+}
+</style>
 <div align="center">
 <img src="model.jpg" style="width:1260px;" border="0" usemap="#map">
 <map name="map">
